fix: 🐛 making the pulse animation be visible again

--- a/src/app/pages/app/home/home.component.scss
+++ b/src/app/pages/app/home/home.component.scss
@@ -75,24 +75,24 @@ $daily_card_bg: #B6E5C8;
         }
     }
     .start-btn {
-        border: 0.2rem solid #fff;
+        border: 0.2rem solid #000066;
         background-color: $primary;
         animation: pulse 2s infinite;
     }
     @keyframes pulse {
         0% {
             transform: scale(0.95);
-            box-shadow: 0 0 0 0 rgba(255,255,255,0.7);
+            box-shadow: 0 0 0 0 rgba(0,0,102,0.7);
         }
 
         70% {
             transform: scale(1);
-            box-shadow: 0 0 0 25px rgba(255,255,255,0);
+            box-shadow: 0 0 0 25px rgba(0,0,102,0);
         }
 
         100% {
             transform: scale(0.95);
-            box-shadow: 0 0 0 0 rgba(255,255,255,0);
+            box-shadow: 0 0 0 0 rgba(0,0,102,0);
         }
     }
     .lead {
